<resources>
    <string name="app_name">Task Manager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_admin">If you are admin, Please Enter admin password</string>
    <string name="userneme">userneme</string>
    <string name="password">password</string>
    <string name="admin_code">admin code</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="input_check">Username or Password is not true format or is null</string>
    <string name="notify_pass_text">Password should be number</string>
    <string name="invalid_input">Invalid Information</string>
    <string name="new_title">Title</string>
    <string name="new_edit_text">new edit text</string>
    <string name="new_content">Content</string>
    <string name="new_date">Date</string>
    <string name="new_time">Time</string>
    <string name="new_state">State</string>
    <string name="todo">TODO</string>
    <string name="doing">DOING</string>
    <string name="done">DONE</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="task_title">Title</string>
    <string name="task_content">Content</string>
    <string name="task_exist_date">Date</string>
    <string name="task_exist_time">Time</string>
    <string name="menu_text_delete_all">Delete All</string>
    <string name="menu_text_logout">Logout</string>
    <string name="search_title">search</string>
    <string name="search_hint">search</string>
    <string name="app_label">search task</string>
    <string name="user_exist">User Already Exist</string>
    <string name="cant_null">Username or password cant be null</string>
    <string name="numeric_pass">Password should be number</string>
    <string name="length_pass">"Password should be more than 8</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="show">Show</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="state">State</string>
    <string name="no_content">No content</string>

    <string name="all_task_info">
        Title: %1$s
        Content: %2$s
        State: %3$s
        Date: %4$s
        Time: %5$s
    </string>
    <string name="go_to_user_task_manager">Go to user task manager</string>
    <string name="number_task">Number Task: </string>
    <string name="date_membership">Date Membership :</string>
    <string name="title_activity_edit">EditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>