<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/so_light_gray"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:background="@color/light_gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show"
        style="@style/BottomSheetTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_56"
        android:text="@string/show"
        app:icon="@drawable/ic_eye" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit"
        style="@style/BottomSheetTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_56"
        android:text="@string/edit"
        app:icon="@drawable/ic_edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/BottomSheetTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_56"
        android:text="@string/share"
        app:icon="@drawable/ic_share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete"
        style="@style/BottomSheetTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_56"
        android:text="@string/delete"
        app:icon="@drawable/ic_trashcan" />

</LinearLayout>