<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_task"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_test"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"
        android:background="@drawable/background_color"
        android:layout_margin="@dimen/mrg_10"
        app:hintTextColor="@color/purple"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/set_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_5"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_content"
        android:background="@drawable/background_color"
        android:layout_margin="@dimen/mrg_10"
        app:hintTextColor="@color/purple"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/set_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_5"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_time"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mrg_10"
        android:textAllCaps="false"
        android:text="@string/set_time"
        app:icon="@drawable/ic_watch"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_date"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mrg_10"
        android:layout_marginRight="@dimen/mrg_10"
        android:textAllCaps="false"
        android:text="@string/set_date"
        app:icon="@drawable/ic_date"
        />

</LinearLayout>