<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/light_orange"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="#00FFFFFF"
                android:layout_margin="@dimen/mrg_10"
                android:src="@drawable/ic_check" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:background="#00FFFFFF"
                android:layout_marginTop="@dimen/mrg_10"
                android:src="@drawable/ic_close" />
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:src="@tools:sample/avatars"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"
        android:background="@drawable/background_color"
        android:layout_margin="@dimen/mrg_10"
        app:hintTextColor="@color/purple"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_5"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contentt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_content"
        android:background="@drawable/background_color"
        android:layout_margin="@dimen/mrg_10"
        app:hintTextColor="@color/purple"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_5"
            android:textColor="@color/black"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mrg_10"
            android:textAllCaps="false"
            android:text="@string/set_time"
            app:icon="@drawable/ic_watch"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mrg_10"
            android:layout_marginRight="@dimen/mrg_10"
            android:textAllCaps="false"
            android:text="@string/set_date"
            app:icon="@drawable/ic_date"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>